header has been added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title></title>
 </head>
 <body>
-
+	<div class = "header">
+		<h1>This page is for learninig </h1>
+		<img src="logo@2x.png">
+	</div>
 </body>
 </html>
