content and footer has been added

--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
 		<h1>This page is for learninig </h1>
 		<img src="logo@2x.png">
 	</div>
+	<div class = "content">
+		<p>What is "version control", and why should you care? 
+			Version control is a system that records changes to
+			a file or set of files over time so that you can 
+			recall specific versions later. For the examples in 
+			this book you will use software source code as the 
+			files being version controlled, though in reality
+			you can do this with nearly any type of file on
+			a computer.
+		</p>	
+	</div>
+	<div class = "footer">
+		<p>learnGIT 2015</p>
+	</div>
 </body>
 </html>
