content has been completed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 			files being version controlled, though in reality
 			you can do this with nearly any type of file on
 			a computer.
+		</p>
+		<h1Краткая история GIT></h1>
+		<p>
+			Как и многие замечательные вещи, GIT начинался с разрушения
+			во имя созидания и жарких споров. С момента создания в 2005 
+			году GIT развивался и эволюционировал, становясь проще и удобнее в использовании, 
+			сохраняя при этом свои первоначальные качества.
 		</p>	
 	</div>
 	<div class = "footer">
