fonts has been modified

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
 			you can do this with nearly any type of file on
 			a computer.
 		</p>
-		<h1Краткая история GIT></h1>
+		<h1>Краткая история GIT</h1>
 		<p>
 			Как и многие замечательные вещи, GIT начинался с разрушения
 			во имя созидания и жарких споров. С момента создания в 2005 
